# krusty

./: .gitignore  README.md
backend/krusty/: Cargo.toml  TODO.md  report.xlsx
backend/krusty/src/: excel.rs  main.rs
backend/krusty/src/excel/: stock_export.rs
backend/krusty/src/models/: stocks.rs
backend/krusty/src/routes/: stock.rs
backend_actix/: Cargo.toml  TODO.md
backend_actix/src/: api.rs  entity.rs  main.rs  repository.rs  router.rs
backend_actix/src/api/: unibit_integration.rs
backend_actix/src/entity/: stock_entity.rs
backend_actix/src/repository/: dividend_repository.rs  stock_repository.rs
backend_actix/src/router/: stock_payload.rs  stock_router.rs
frontend/: index.html
