[package]
name = "krusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
actix-web = "4"
json = "0.12"
log = "0.4"
# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Http client
awc = "3.0.0"

# Postgres
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls", "postgres" ] }
